# rubber-duck-on-the-screen

./: Cargo.toml  README.md
assets/: duck.glb
src/: main.rs
